test/ui/tests/metadata/unbalanced-brackets.metadata
# TEST fail metadata
# @Task report additional "unbalanced bracket" errors

foo: [{
    bar: "text"

